prevent Legend dot squish

--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -1,6 +1,8 @@
 .dot {
     width: 10px;
     height: 10px;
+    min-width: 10px;
+    min-height: 10px;
     border-radius: 50%;
     background-color: blue;
     transform: translate(-50%,-50%);
